--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -8,6 +8,10 @@ html {
 }
 
 body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   margin: 0;
   font: $base-text-size / 1 $base-font-family;
 }
